nettoyage du code + ajout commentaires